# proc-macro-experiments

./: .gitignore  Cargo.toml
combinations/: Cargo.toml
combinations/src/: lib.rs  main.rs
fibonacci/: Cargo.toml
wgpux/: Cargo.toml  build.rs
wgpux-derive/: Cargo.toml
wgpux-derive/src/: lib.rs
wgpux-derive/tests/: runner.rs  vertex-arrays.rs  vertex-parse.rs  vertex-valid.rs
wgpux/examples/: vertex_colored.frag  vertex_colored.frag.spv  vertex_colored.rs  vertex_colored.vert  vertex_colored.vert.spv
wgpux/src/: lib.rs
