[package]
name = "wgpux-derive"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
wgpu = "0.6"
png = "0.16"
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
version = "1.0"
features = ["fold"]

[dev-dependencies]
wgpux = { path = "../wgpux", version = "0.1" }
trybuild = "1.0"